--- a/_posts/2014-09-10-pro-bono.md
+++ b/_posts/2014-09-10-pro-bono.md
@@ -4,7 +4,8 @@ title:      Pro-Bono
 date:       2014-09-10 12:32:18
 img:	images/pro-bono/pro-bono.jpg
 summary:    Pro-Bono I is a powered speaker that turns any input into a U2 song. 
-categories: probono 
+categories: all
+tags: probono
 ---
 
 Pro-Bono I is a powered speaker that turns any input into a U2 song. It contains a high-quality powered speaker, a microcontroller and a computer. As soon as any input it receives begins playing, the speaker will emit a song from 'Songs of Innocence'. Why play anything else, ever? Pro Bono I was built as a response to Apple's hilarious and frightening decision to shove a U2 album into every working apple device, without telling users. We could lol, but we did a little more.
