--- a/_posts/2016-02-04-last-seen.md
+++ b/_posts/2016-02-04-last-seen.md
@@ -4,7 +4,7 @@ title:      Last Seen
 date:       2016-02-04
 img:  images/last-seen/last-seen-title-lg.png
 summary:    A packet sniffer installed at the Whitney as a part of Laura Poitras' show AstroNoise
-categories: selected-works
+categories: all selected-works
 ---
 
 
@@ -43,7 +43,7 @@ A fun highlight for me was this tweet that shows Edward Snowden explaining how t
 
 ###Selcted Press
 
- - [The Varge](http://www.theverge.com/2016/2/5/10919006/laura-poitras-astro-noise-citizenfour-snowden-whitney-museum)
+ - [The Verge](http://www.theverge.com/2016/2/5/10919006/laura-poitras-astro-noise-citizenfour-snowden-whitney-museum)
 
 
 <div class="mxn1">
