--- a/_posts/2016-07-20-skylift.md
+++ b/_posts/2016-07-20-skylift.md
@@ -5,7 +5,7 @@ date:       2016-07-20
 img:  images/skylift/skylift-cover.png
 summary:    A geolocation emulator
 permalink: /sky-lift/
-categories: all
+categories: all research
 ---
 
 
