--- a/_posts/2016-02-04-last-seen.md
+++ b/_posts/2016-02-04-last-seen.md
@@ -4,6 +4,7 @@ title:      Last Seen
 date:       2016-02-04
 img:  images/last-seen/last-seen-title-lg.png
 summary:    A packet sniffer installed at the Whitney as a part of Laura Poitras' show AstroNoise
+permalink: /last-seen/
 categories: all selected-works
 ---
 
