--- a/_posts/2012-11-01-pop.md
+++ b/_posts/2012-11-01-pop.md
@@ -11,7 +11,7 @@ categories: all research
 
 POP! is an interactive bubble machine that triggers a “POP” when a bubble is popped. The idea originated in our wish to create an playful interaction that transports the user back to a child-like state of fun and excitement.
 
-<div class="mxn1">
+<div class="mxn1 embed-container">
 <iframe class="px4" src="//player.vimeo.com/video/97659314" width="670" height="376" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
