--- a/_posts/2014-09-10-pro-bono.md
+++ b/_posts/2014-09-10-pro-bono.md
@@ -13,9 +13,9 @@ Pro-Bono I is a powered speaker that turns any input into a U2 song. It contains
  
 
 
-<div class="mxn1">
+<div class="mxn1 embed-container">
 
-<iframe  class="px2" src="//player.vimeo.com/video/106927118" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe  class="px3 center-block" src="//player.vimeo.com/video/106927118" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 </div>
 This work was done in collaboration with Omer Shapira for Unstable.Technology
