--- a/_posts/2016-02-04-last-seen.md
+++ b/_posts/2016-02-04-last-seen.md
@@ -8,6 +8,11 @@ permalink: /last-seen/
 categories: all selected-works
 ---
 
+<div class="mxn1">
+<img class= "px3 center-block" src="/images/last-seen/last-seen-title-lg.png"/>
+</div>
+
+
 
 Last Seen is a Wi-Fi packet sniffer that was a part of Laura Poitras’ show, 
 [Astro Noise](http://whitney.org/Exhibitions/LauraPoitras), at the Whitney museum of art.
@@ -15,7 +20,7 @@ Last Seen is a Wi-Fi packet sniffer that was a part of Laura Poitras’ show,
 
 
 <div class="mxn1">
-<img class ="px3" src="/images/last-seen/people.png"/>
+<img class= "px3 center-block" src="/images/last-seen/loop.gif" alt="https://gyazo.com/40dc49aa8001a796479da1b27ccda637" width="356"/>
 </div>
 
 
@@ -33,13 +38,18 @@ While it is hard to determine a persons identity from this information it is fai
 This piece replicates the method used to collect this data in order to reveal the parts of our personal history we are broadcasting.
 
 
+<div class="mxn1">
+<img class ="px3 center-block" src="/images/last-seen/people.png"/>
+</div>
+
+
 For more background information check out [From The Dark](http://samatt.github.io/from-the-dark)
 
 
 A fun highlight for me was this tweet that shows Edward Snowden explaining how the piece works when he got a tour of the show.
 
 <div class="mxn1">
-<img class ="px3" style="max-height:700px;" src="/images/last-seen/snowden.png"/>
+<img class ="px3 center-block" style="max-height:700px;" src="/images/last-seen/snowden.png"/>
 </div>
 
 
@@ -49,9 +59,6 @@ A fun highlight for me was this tweet that shows Edward Snowden explaining how t
  - [The Verge](http://www.theverge.com/2016/2/5/10919006/laura-poitras-astro-noise-citizenfour-snowden-whitney-museum)
 
 
-<div class="mxn1">
-<img src="/images/last-seen/loop.gif" alt="https://gyazo.com/40dc49aa8001a796479da1b27ccda637" width="356"/>
-</div>
 
 <!-- <div class="mxn1">
 <iframe class="px4" src="//player.vimeo.com/video/110800707" width="670" height="376" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
