--- a/_posts/2014-01-15-clouds.md
+++ b/_posts/2014-01-15-clouds.md
@@ -13,7 +13,7 @@ CLOUDS is not a linear film, but a real-time executable which generates sequence
 
 My role in this project was Systems Developer. I helped develop the story engine which generated the conversations or sequences based on user input in real-time. I also developed a few of the visual systems that were used in the movie. Notably, the machine vision system and the twitter visualization.
 
-<div class="mxn1">
+<div class="mxn1 embed-container">
 <iframe class="px4" src="//player.vimeo.com/video/113528653" width="670" height="376" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
