--- a/_posts/2016-07-20-skylift.md
+++ b/_posts/2016-07-20-skylift.md
@@ -13,7 +13,7 @@ SKYLIFT is a geolocation emulator that virtually relocates visitors to Julian As
 
 I did the inital research and worked on the proof-of-concept for this piece.
 
-<div class="mxn1">
+<div class="mxn1 center block">
 <img src="/images/skylift/skylift-anim-01.gif" />
 </div>
 
@@ -21,7 +21,7 @@ I did the inital research and worked on the proof-of-concept for this piece.
 
 This piece focuses on exposing the novel ways in which we are now tracked through our geolocation. While traditionally geolocation was only done using GPS, since the early teens smartphone have relied on GPS and Wi-Fi information to accurately geolocate devices. In order to spoof a devices location we only needed to generate Wi-Fi beacons that were captured from somewhere, in this case, Julian Assannges residence at the Ecudorian Embassy.  This was done using a raspberry pi.
 
-<div class="mxn1">
+<div class="mxn1 center">
 <img src="/images/skylift/skylift-07.jpg" />
 </div>
 
