--- a/_posts/2014-01-15-clouds.md
+++ b/_posts/2014-01-15-clouds.md
@@ -7,32 +7,35 @@ summary:    An interactive documentary about the creative coding community
 categories: all research
 ---
 
+<div class="mxn1 embed-container">
+<iframe src="https://player.vimeo.com/video/89680830" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+
 [CLOUDS](http://cloudsdocumentary.com/) is an interactive documentary by James George and Jonathan Minard that presents a conversation among 40 artists, designers, and hackers who use code, and collaborate on open source tool kits. It explores themes of creativity and invention, interactive art, simulation, computational design, data visualization, and the future of storytelling.
 
 CLOUDS is not a linear film, but a real-time executable which generates sequences of dialogue based on interactive input. Each of the interviews has been edited into individual fragments, and richly tagged. An algorithm then leaps from clip to clip, creating new conversations on the fly, while preserving continuity of ideas and themes. Viewers use gesture and spatial interaction metaphors to chart a course through the rhizomatic content space.
 
 My role in this project was Systems Developer. I helped develop the story engine which generated the conversations or sequences based on user input in real-time. I also developed a few of the visual systems that were used in the movie. Notably, the machine vision system and the twitter visualization.
 
-<div class="mxn1 embed-container">
-<iframe class="px4" src="//player.vimeo.com/video/113528653" width="670" height="376" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
 
-<div>
-<img src="/images/powerclip/5.jpg" />
-</div>
 
-<div>
-<img src="/images/powerclip/4.jpg" />
-</div>
-
-<div class="mxn1">
+<div class="mxn1 center-block">
 <img src="/images/clouds/1.png" />
 </div>
 
-<div class="mxn1">
+<div class="mxn1 center-block">
 <img src="/images/clouds/2.png" />
 </div>
 
-<div>
+<div class="mxn1 center-block">
+<img src="/images/clouds/5.png" />
+</div>
+
+<div class="mxn1 center-block">
+<img src="/images/clouds/4.png" />
+</div>
+
+
+<div class="mxn1 center-block">
 <img src="/images/clouds/3.png" />
 </div>
