--- a/_posts/2012-11-01-pop.md
+++ b/_posts/2012-11-01-pop.md
@@ -4,8 +4,7 @@ title:      Pop!
 date:       2012-11-01
 img:  images/pop/0.png
 summary:    How to make bubbles interactive
-categories: all research
-categories: all research
+categories: all projects
 ---
 
 
