--- a/_posts/2014-01-15-clouds.md
+++ b/_posts/2014-01-15-clouds.md
@@ -4,7 +4,7 @@ title:      CLOUDS
 date:       2014-01-10
 img:  images/clouds/0.jpg
 summary:    An interactive documentary about the creative coding community
-categories: all research
+categories: all projects
 ---
 
 <div class="mxn1 embed-container">
