--- a/_posts/2014-09-10-pro-bono.md
+++ b/_posts/2014-09-10-pro-bono.md
@@ -4,7 +4,7 @@ title:      Pro-Bono
 date:       2014-09-10 12:32:18
 img:	images/pro-bono/pro-bono.jpg
 summary:    Pro-Bono I is a powered speaker that turns any input into a U2 song. 
-categories: all
+categories: all projects
 tags: probono
 ---
 
