--- a/_posts/2016-02-04-last-seen.md
+++ b/_posts/2016-02-04-last-seen.md
@@ -5,7 +5,7 @@ date:       2016-02-04
 img:  images/last-seen/last-seen-title-lg.png
 summary:    A packet sniffer installed at the Whitney as a part of Laura Poitras' show AstroNoise
 permalink: /last-seen/
-categories: all selected-works
+categories: all projects
 ---
 
 <div class="mxn1">
