--- a/_posts/2016-07-20-skylift.md
+++ b/_posts/2016-07-20-skylift.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Skylift
+title:      Pulse and Bloom
 date:       2016-07-20
 img:  images/skylift/skylift-cover.png
 summary:    A geolocation emulator
