--- a/_posts/2015-06-20-Level-Up.md
+++ b/_posts/2015-06-20-Level-Up.md
@@ -26,23 +26,23 @@ The device is 3D printed and works mechanically. It works on the principle of 'b
 The device can be easily mass mantufactured using a 'food safe' material and can be used in Rehabilitation centers to train the visually impaired to become independent in performing their daily activities.
 
 <h2>Ideation</h2>
-<img src="images/level-up/01-idea1.png">
-<img src="images/level-up/02-idea2.png">
-<img src="images/level-up/03-idea3.png">
-<img src="images/level-up/04-idea4.png">
-<img src="images/level-up/05-idea5-v2.png">
+<img src="/images/level-up/01-idea1.png">
+<img src="/images/level-up/02-idea2.png">
+<img src="/images/level-up/03-idea3.png">
+<img src="/images/level-up/04-idea4.png">
+<img src="/images/level-up/05-idea5-v2.png">
 <h2>Prototype 1</h2>
-<img src="images/level-up/09-prototype1.JPG">
+<img src="/images/level-up/09-prototype1.JPG">
 <h2>Testing of Prototype 1</h2>
 <h3>Feedbacks</h3>
 - Clip was not proper
 - The inner cylinder did not float
 - The whole device was very tiny for a visually impaired to feel<br>
-<img src="images/level-up/06-idea5.png">
+<img src="/images/level-up/06-idea5.png">
 <h2>Prototype 2</h2>
-<img src="images/level-up/10-prototype2.JPG">
+<img src="/images/level-up/10-prototype2.JPG">
 <h2>Testing of Prototype 2</h2>
-<img src="images/level-up/14-testing-prototype-2.gif">
+<img src="/images/level-up/14-testing-prototype-2.gif">
 <h3>Feedbacks</h3>
 - The new thickness of the clip was fitting in too tight on a tumbler, so removing from a liquid filled tumbler was very difficult
 - The clip design did not fit on a mug
@@ -50,18 +50,18 @@ The device can be easily mass mantufactured using a 'food safe' material and can
 - The 3D printing machine was not able to print thin hollow cylinder
 - The colour of the inner cylinder and outer body should be contrast. This will aid partially visually impaired to see the different parts.
 - The visually impaired asked whether it can detect different levels, which the clip cannot do.<br>
-<img src="images/level-up/07-idea5.png">
-<img src="images/level-up/08-idea5.png">
+<img src="/images/level-up/07-idea5.png">
+<img src="/images/level-up/08-idea5.png">
 <h2>Prototype 3</h2>
-<img src="images/level-up/11-prototype3.JPG">
+<img src="/images/level-up/11-prototype3.JPG">
 <h2>Testing of Prototype 3</h2>
-<img src="images/level-up/15-testing-prototype-3-v2.gif">
+<img src="/images/level-up/15-testing-prototype-3-v2.gif">
 <h3>Feedbacks</h3>
 - As 3D printing a thin hollow sphere was not possible, we used a foam to test proof of concept.
 - The clip fitted on tumbler, cup and mug easily.
 - For colour contrast orange worked, but white did not. (But due to lack of coloured 3D printing material that could not be tested)
 - The visually impaired asked whether the material is food safe.
 <h2>The Team</h2>
-<figure><center><img src="images/level-up/12-team.jpeg">
+<figure><center><img src="/images/level-up/12-team.jpeg">
 <figcaption align="center"><h5>(from left) Shreeyash Salunke(me), Dhruv Joshi, Sujeath Pareddy, Sarvesh Pimpalkar, Sanchit Kumar Agarwal and Samarth Bansal</h5></figcaption></center></figure>
 
